--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -27,6 +27,7 @@
             <h3 style="padding: 20px; font-size: 20px;">Edit Profile</h3>
           </div>
           {{form.image}} <br>
+          {{form.background_image}} <br>
 		  {{form.first_name}} <br>
 		  {{form.last_name}} <br>
 		  {{form.bio}} <br>
