--- a/templates/profile.html
+++ b/templates/profile.html
@@ -30,12 +30,14 @@
 
             <div class="profile">
 
-                <div class="profile-image">
-
-                    <img src="{{profile.image.url}}" alt="" style="width: 200px; height: 200px;">
-
-                </div>
-
+                <div class="profile-header">
+    <div class="profile-background">
+        <img src="{{profile.background_image.url}}" alt="Profile background" class="background-image">
+    </div>
+    <div class="profile-picture">
+        <img src="{{profile.image.url}}" alt="Profile picture" class="profile-image">
+    </div>
+</div>
                 <div class="profile-user-settings">
                         {% if profile.first_name %}
                         <h6 class="profile-user-name">{{profile.first_name}} {{profile.last_name}}</h6> <br>
